# scrapper-guitar-details

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  coverage.lcov  pyproject.toml  transactions.yml
.github/workflows/: automation.yaml  test.yaml
src/: listing.py  listing_models.py  main.py  reverb_transaction.py
tests/: test_listing.py  test_listing_models.py
tests/cassettes/: test_GuitarWebPage_get_all_h6[BB King Lucille Cherry].yaml  test_GuitarWebPage_get_all_h6[Gibson Custom shop Greeny].yaml  test_GuitarWebPage_get_finishes[BB King Lucille Cherry].yaml  test_GuitarWebPage_get_finishes[Gibson Custom shop Greeny].yaml  test_GuitarWebPage_get_finishes[Gibson Les Paul Supreme].yaml  test_GuitarWebPage_get_guitar_details[BB King Lucille Cherry].yaml  test_GuitarWebPage_get_guitar_details[Gibson Custom shop Greeny].yaml  test_GuitarWebPage_get_master_content[BB King Lucille Cherry].yaml  test_GuitarWebPage_get_master_content[Gibson Custom shop Greeny].yaml  test_GuitarWebPage_get_model[BB King Lucille Cherry].yaml  test_GuitarWebPage_get_model[Gibson Custom shop Greeny].yaml  test_ListingWebPage_get_elements[gibson-es].yaml  test_ListingWebPage_get_elements[gibson-les-paul].yaml  test_ListingWebPage_get_elements[les-paul].yaml  test_ListingWebPage_get_elements[modern-les-paul].yaml  test_ListingWebPage_get_elements[original-es].yaml
tests/data/: bb-king-lucille-cherry.json  gibson-custom-shop-greeny.json
tests/pages/: Epiphone B.B. King Lucille, Exclusive Cherry.html  epiphone-bb-king-lucille-cherry.html
