[tool.poetry]
name = "scrapper-guitar-details"
version = "0.1.0"
description = ""
authors = ["Jordi Riera <kender.jr@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.11.2"
loguru = "^0.7.0"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.3.0"
pydantic-yaml = "^1.1.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrapper = "src.main:app"
