[tool.poetry]
name = "scrapper-guitar-details"
version = "0.1.0"
description = ""
authors = ["Jordi Riera <kender.jr@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.13.0"
loguru = "^0.7.2"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.4.2"
pydantic-yaml = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest-cov = "^4.1.0"
pytest-random-order = "^1.1.0"
pytest = "^7.4.2"
vcrpy = "^5.1.0"
pytest-vcr = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrapper = "src.main:app"
